# fancybook

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
cmark2tex/: .gitignore  Cargo.toml  README.md
cmark2tex/src/: error.rs  lib.rs  main.rs  tests.rs
mathyank/: Cargo.toml
mathyank/src/: lib.rs
mathyank/src/parse/: mod.rs  tests.rs  types.rs
mdbook-boilerplate/: Cargo.toml
mdbook-boilerplate/src/: errors.rs  lib.rs
mdbook-fishextract/: Cargo.toml  README.md
mdbook-fishextract/src/: errors.rs  lib.rs  main.rs  mermaid.rs  tests.rs  types.rs
mdbook-scientific/: Cargo.toml  README.md
mdbook-scientific/src/: errors.rs  fragments.rs  lib.rs  main.rs  tests.rs  types.rs
mdbook-scientific/src/parse/: mod.rs  tests.rs
mdbook-scientific/src/preprocess/: format.rs  mod.rs
mdbook-scientific/src/preprocess/parse/: mod.rs  tests.rs  types.rs
mdbook-tectonic/: Cargo.toml  README.md
mdbook-tectonic/docs/: README.md  book.toml
mdbook-tectonic/docs/src/: intro.md
mdbook-tectonic/examples/: mdBook Documentation.md
mdbook-tectonic/examples/sample-book/: book.toml
mdbook-tectonic/examples/sample-book/book/: My Book.tex
mdbook-tectonic/examples/sample-book/book/latex/: My Book.tex
mdbook-tectonic/examples/sample-book/src/chapter-1/: chapter.md
mdbook-tectonic/examples/sample-book/src/chapter-1/sub/: sub.md
mdbook-tectonic/src/: main.rs  template.tex  tests.rs
sample-book/: .gitignore  book.toml
sample-book/src/: SUMMARY.md  bar.md  foo.md
