[package]
name = "cmark2tex"
version = "0.4.0-beta.1"
authors = [
  "lbeckman314 <liam@liambeckman.com>",
  "Sebastian Steiner <sebastian.steiner@tuta.io>",
  "Bernhard Schuster <bernhard@ahoi.io>",
]
description = "A small utility to convert markdown files to pdf exploiting tectonic."
edition = "2021"
license = "MIT"
repository = "https://github.com/drahnr/fancybook/tree/master/cmark2tex"
readme = "README.md"
keywords = ["tex", "markdown", "cmark", "commonmark"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
walkdir = "2.2.9"
Inflector = "0.11.4"
regex = "1.2.1"
log = "0.4.8"
fs-err = "2"
env_logger = "0.10"
html2md = "0.2.9"
resvg = { version = "0.28", features = [] }
thiserror = "1"
png = "0.17"
color-eyre = "0.6"
mathyank = { version = "0.0.1", path = "../mathyank" }
itertools = "0.12"

[dev-dependencies]
pretty_env_logger = "0.5"
