[package]
name = "mdbook-fishextract"
version = "0.0.2"
authors = [
  "Bernhard Schuster <bernhard@ahoi.io>",
]
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "A mdbook preprocessor which handles mermaid graphs, offline, requires `mmdc`"
keywords = ["mdbook", "mermaid", "graph"]
repository = "https://github.com/drahnr/fancybook/mdbook-fishextract"


[dependencies]
mdbook = { version = "0.4", default-features = false }
clap = { version = "4", features = ["derive"] }
serde = "1"
serde_json = "1"
sha2 = "0.10.6"
which = { version = "4", default-features = false }
thiserror = "1"
fs-err = "2.8"
color-eyre = { version = "0.6.2", features = [] }
semver = "1"
pulldown-cmark = "0.9.2"
pulldown-cmark-to-cmark = "10.0.4"
log = "0.4"
env_logger = "0.10.0"
toml = "0.5"
mdbook-boilerplate = { path = "../mdbook-boilerplate" }

[dev-dependencies]
assert_matches = "1"
