[package]
name = "mdbook-fishextract"
version = "0.1.0"
authors = ["Bernhard Schuster <bernhard@ahoi.io>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "A mdbook preprocessor which handles mermaid graphs, offline, requires `mmdc`"
keywords = ["mdbook", "mermaid", "graph"]
repository = "https://github.com/drahnr/fancybook/mdbook-fishextract"


[dependencies]
mdbook = { version = "0.4", default-features = false }
clap = { version = "4", features = ["derive"] }
serde = "1"
serde_json = "1"
sha2 = "0.10.6"
thiserror = "1"
fs-err = "2.8"
color-eyre = { version = "0.6.2", features = [] }
semver = "1"
pulldown-cmark = { workspace = true }
pulldown-cmark-to-cmark = { workspace = true }
log = "0.4"
env_logger = "0.10.0"
toml = "0.5"
mdbook-boilerplate = { version = "0.1", path = "../mdbook-boilerplate" }

[dev-dependencies]
assert_matches = "1"
